Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89101

QPainter::fillRect broken with QBrush containing DPR > 1 pixmap

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.8, 6.3.0 Alpha
    • 5.15.2
    • GUI: Painting
    • None
    • Linux/X11
    • 73119e27b31e7d5b48e1cd3fcbe2f6edf049da5d (qt/qtbase/dev) d946d4129f64eda0c2e2ba4cfb3992164a38c1d6 (qt/qtbase/6.2) 433a9c0ae788560e67587ab56e613bda9933851f (qt/tqtc-qtbase/5.15)

    Description

      the attached MWE shows that QPainter::fillRect with a QBrush that contains a DPR > 1 pixmap is broken. Oddly enough, using QPainter::drawRect works fine...

      The attached screenshot shows that using the brush on a label or with drawRect looks fine (no blocky scaling artifacts). But using it with fillRect is much larger and blocky

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            milianw Milian Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes